fixed overflow issue with footer

--- a/landing/view/tabs/css/tabs.css
+++ b/landing/view/tabs/css/tabs.css
@@ -18,6 +18,7 @@
 	width: 100%;
 	font-weight: 300;
 	font-size: 1.25em;
+	min-height:100vh;
 }
 
 /* Nav */
